--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -8,7 +8,7 @@
     <img class="preview z-depth-1 rounded" src="{{ entry.preview }}">
     {%- else -%}
       {%- assign entry_path = entry.preview | prepend: '/assets/img/publication_preview/' -%}
-      {% include figure.html
+      {% include figure.liquid
       path=entry_path
       sizes = "200px"
       class="preview z-depth-1 rounded"
@@ -149,8 +149,8 @@
     {%- if entry.bibtex_show %}
       <a class="bibtex btn btn-sm z-depth-0" role="button">Bib</a>
     {%- endif %}
-    {%- if entry.html %}
-      <a href="{{ entry.html }}" class="btn btn-sm z-depth-0" role="button">HTML</a>
+    {%- if entry.liquid %}
+      <a href="{{ entry.liquid }}" class="btn btn-sm z-depth-0" role="button">HTML</a>
     {%- endif %}
     {%- if entry.pdf %}
       {% if entry.pdf contains '://' -%}
@@ -245,7 +245,7 @@
     {% if entry.video -%}
     <!-- Hidden video block -->
     <div class="abstract hidden">
-      <div style="text-align: center;">{% include video.html path=entry.video class="img-fluid rounded z-depth-1" controls=true %}</div>
+      <div style="text-align: center;">{% include video.liquid path=entry.video class="img-fluid rounded z-depth-1" controls=true %}</div>
     </div>
     {%- endif -%}
 
